src/rules/snapshots/pg_migration_lint__rules__pgm002__tests__drop_index_no_concurrent_fires.snap
---
source: src/rules/pgm002.rs
expression: findings
---
- rule_id: PGM002
  severity: Critical
  message: "DROP INDEX 'idx_orders_status' on existing table 'orders' should use CONCURRENTLY to avoid holding an exclusive lock."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
