src/rules/snapshots/pg_migration_lint__rules__pgm002__tests__drop_index_on_partitioned_table_partition_message.snap
---
source: src/rules/pgm002.rs
expression: findings
---
- rule_id: PGM002
  severity: Critical
  message: "DROP INDEX 'idx_orders_status' on partitioned table 'orders' will lock all partitions. CONCURRENTLY is not supported for partitioned parent indexes."
  file: migrations/003.sql
  start_line: 1
  end_line: 1
